--- a/huawei_prototype/requirements.txt
+++ b/huawei_prototype/requirements.txt
@@ -1,15 +1,22 @@
 asgiref==3.8.1
+black==25.1.0
 branca==0.8.1
 certifi==2025.1.31
 charset-normalizer==3.4.1
+click==8.1.8
 Django==5.1.7
 folium==0.19.5
 idna==3.10
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+mypy-extensions==1.0.0
 numpy==2.2.4
+packaging==24.2
+pathspec==0.12.1
+platformdirs==4.3.7
 requests==2.32.3
 sqlparse==0.5.3
+tomli==2.2.1
 typing_extensions==4.12.2
 urllib3==2.3.0
 xyzservices==2025.1.0
