--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,15 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
 Django==5.1.7
+dotenv==0.9.9
+flake8==7.2.0
 folium==0.19.5
 geopandas==1.0.1
+gunicorn==23.0.0
 idna==3.10
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+mccabe==0.7.0
 mypy-extensions==1.0.0
 networkx==3.4.2
 numpy==2.2.4
@@ -22,6 +26,9 @@ pyogrio==0.10.0
 pyproj==3.7.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
+pycodestyle==2.13.0
+pyflakes==3.3.2
+python-dotenv==1.1.0
 requests==2.32.3
 shapely==2.1.0
 six==1.17.0
