--- a/huawei_prototype/requirements.txt
+++ b/huawei_prototype/requirements.txt
@@ -6,17 +6,28 @@ charset-normalizer==3.4.1
 click==8.1.8
 Django==5.1.7
 folium==0.19.5
+geopandas==1.0.1
 idna==3.10
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 mypy-extensions==1.0.0
+networkx==3.4.2
 numpy==2.2.4
+osmnx==2.0.2
 packaging==24.2
+pandas==2.2.3
 pathspec==0.12.1
 platformdirs==4.3.7
+pyogrio==0.10.0
+pyproj==3.7.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
 requests==2.32.3
+shapely==2.1.0
+six==1.17.0
 sqlparse==0.5.3
 tomli==2.2.1
 typing_extensions==4.12.2
+tzdata==2025.2
 urllib3==2.3.0
 xyzservices==2025.1.0
