--- a/huawei_prototype/requirements.txt
+++ b/huawei_prototype/requirements.txt
@@ -4,7 +4,7 @@ branca==0.8.1
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
-Django==5.1.7
+Django==4.2.11
 folium==0.19.5
 geopandas==1.0.1
 idna==3.10
@@ -31,3 +31,8 @@ typing_extensions==4.12.2
 tzdata==2025.2
 urllib3==2.3.0
 xyzservices==2025.1.0
+django_plotly_dash==2.2.1
+dash==2.9.3
+dash-bootstrap-components==1.5.0
+plotly==5.18.0
+channels>=4.0.0
